--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/smartera}
 #spring.data.mongodb.database=smartera
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://aac.platform.smartcommunitylab.it
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
+
 server.port=${SERVER_PORT:9080}
 logging.level.org.springframework=INFO
 logging.level.eu.fbk.dslab.smartera=DEBUG
